--- a/BookListRazor/BookListRazor/Properties/launchSettings.json
+++ b/BookListRazor/BookListRazor/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BookListRazor": {
+    "BookListRazor_dev": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
@@ -23,7 +23,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BookListRazor_Staging": {
+    "BookListRazor_staging": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5005;http://localhost:5006",
