--- a/MinhaDemoMVC/MinhaDemoMVC/appsettings.json
+++ b/MinhaDemoMVC/MinhaDemoMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MinhaDemoMVCContext": "Server=(localdb)\\mssqllocaldb;Database=MinhaDemoMVCContext;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
