--- a/AppModelo/src/DevIO.UI.Site/DevIO.UI.Site.csproj
+++ b/AppModelo/src/DevIO.UI.Site/DevIO.UI.Site.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Produtos\Data\" />
+    <Folder Include="Areas\Produtos\Models\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
