--- a/AspNetCoreIdentity/AspNetCoreIdentity/Properties/launchSettings.json
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/Properties/launchSettings.json
@@ -28,7 +28,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Producion"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
 
