--- a/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Development.json
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "AspNetCoreIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AspNetCoreIdentityd;Trusted_Connection=True;MultipleActiveResultSets=True"
-  }
+  },
+  "test_reload":  "teste reload - false"
 }
