Trying out logging
Trying out logging using KissLog.Net

--- a/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Production.json
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Production.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "KissLog.OrganizationId": "43154221-b166-4201-9cbe-2107bf3584a5",
+  "KissLog.ApplicationId": "7aaed5cf-5f02-47fe-a3e7-faebc576cc60",
+  "KissLog.Environment": "Production"
 }
