--- a/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
@@ -8,6 +8,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="KissLog.AspNetCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
