--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.Business/DevIO.Business.csproj
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.Business/DevIO.Business.csproj
@@ -1,7 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Notificacoes\" />
+    <Folder Include="Validations\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 
 </Project>
