--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.Data/DevIO.Data.csproj
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.Data/DevIO.Data.csproj
@@ -1,7 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Mappings\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
 
 </Project>
