--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.json
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "VaiSerJogadoForaContext": "Server=(localdb)\\mssqllocaldb;Database=VaiSerJogadoForaContext-57e73584-b14b-41f7-b580-550bde87d1e3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
