trying out local deployment

--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.json
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection2": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;User Id=philipeformagio;Password=Skull@10;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
