--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.Development.json
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection2": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;User Id=philipeformagio;Password=Skull@10;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
