--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.Production.json
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/appsettings.Production.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection2": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMvcCompleta;User Id=philipeformagio;Password=Skull@10;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
