Interfacea and its concreate classes added into the asp.net container

--- a/Dapper.WebApi/Dapper.WebApi/Dapper.WebApi.csproj
+++ b/Dapper.WebApi/Dapper.WebApi/Dapper.WebApi.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dapper.Infrastructure\Dapper.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
