--- a/Dapper.WebApi/Dapper.WebApi/Dapper.WebApi.csproj
+++ b/Dapper.WebApi/Dapper.WebApi/Dapper.WebApi.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>Dapper.WebApi.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.1" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Dapper.Infrastructure\Dapper.Infrastructure.csproj" />
   </ItemGroup>
