--- a/Dapper.WebApi/Dapper.WebApi/appsettings.json
+++ b/Dapper.WebApi/Dapper.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PhamaMicroCrm;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DapperWebAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
