--- a/MyFirstAPI/MyFirstAPI.csproj
+++ b/MyFirstAPI/MyFirstAPI.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.6" />
+  </ItemGroup>
+
 
 </Project>
