--- a/the-js-junkyard/basics-01-starting-project/.vscode/launch.json
+++ b/the-js-junkyard/basics-01-starting-project/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "url": "file:///C:/Users/phili/Documents/Projects/sandbox-studies/the-js-junkyard/basics-01-starting-project/index.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
