--- a/01 MinhaAPICompleta/MinhaAPICompleta/src/DevIO.Api/appsettings.json
+++ b/01 MinhaAPICompleta/MinhaAPICompleta/src/DevIO.Api/appsettings.json
@@ -9,5 +9,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaApiCoreDB2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
   }
 }
+
+//emissor: issuer
+//validoEM: audiencia, audience
